--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="skills-top">
           <h1 class="section-title">Sk<span>i</span>lls</h1>
           <p>
-            I'm a beginner front end developer having began coding in November
+            I'm a self taught front end developer having began coding in November
             2019. Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
             alias laudantium harum, cumque modi mollitia ut doloremque! Tempora
             nesciunt quam non. Quos fugiat iste similique amet nulla consequatur
@@ -74,10 +74,6 @@
               <a href="https://www.w3schools.com/" target="_blank"
                 >w3schools.com</a
               >
-              <br />
-              <a href="https://www.youtube.com/channel/UC29ju8bIPH5as8OGnQzwJyA"
-                >Traversy Media
-              </a>
               <br />
               <a href="https://www.freecodecamp.org/learn">freeCodeCamp</a>
               <br />
@@ -396,12 +392,9 @@
               target="_blank"
               ><img
                 id="fcc"
-                src="/icons/icons8-free-code-camp-64 (1).png"
+                src="icons/icons8-fire-64.png"
                 alt="img"
-                srcset="
-                  https://img.icons8.com/windows/64/000000/free-code-camp.png
-                "
-              />
+                srcset="" />
             </a>
           </div>
           <div class="social-item">
