added my resume to page and madechanges to mobile view

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
             2019. Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
             alias laudantium harum, cumque modi mollitia ut doloremque! Tempora
             nesciunt quam non. Quos fugiat iste similique amet nulla consequatur
-            neque. Magni.
+            neque. Magni. <br>
+            <a href="resume.pdf" target="_blank">Download Resume</a>
           </p>
         </div>
         <div class="skills-bottom">
@@ -69,17 +70,10 @@
                 srcset="https://img.icons8.com/nolan/50/html-5.png"
               />
             </div>
-            <h2>HTML 5</h2>
-            <p>
-              <a href="https://www.w3schools.com/" target="_blank"
-                >w3schools.com</a
-              >
-              <br />
-              <a href="https://www.freecodecamp.org/learn">freeCodeCamp</a>
-              <br />
-              Lorem ipsum dolor, s
-            </p>
+            <h2>HTML</h2>
+            <p>Lorem ipsum dolor sit amet.</p>
           </div>
+
           <div class="skills-item">
             <div class="icon">
               <img
@@ -91,8 +85,6 @@
             <h2>CSS</h2>
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe
-              atque ducimus cum, sequi iusto quo. Officia architecto voluptas
-              cum necessitatibus.
             </p>
           </div>
           <div class="skills-item">
@@ -106,8 +98,7 @@
             <h2>Javascript</h2>
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe
-              atque ducimus cum, sequi iusto quo. Officia architecto voluptas
-              cum necessitatibus.
+              atque ducimus cum, sequi iusto quo.
             </p>
           </div>
           <div class="skills-item">
@@ -121,8 +112,7 @@
             <h2>React JS</h2>
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe
-              atque ducimus cum, sequi iusto quo. Officia architecto voluptas
-              cum necessitatibus.
+              atque ducimus cum, 
             </p>
           </div>
         </div>
@@ -275,7 +265,7 @@
           <h1 class="section-title">About<span>me</span></h1>
           <h2>Font End Web Developer</h2>
           <p>
-            I'm an International Relations graduate from University of Pretoria
+            I'm an <a href="resume.pdf" target="_blank">International Relations Graduate from University of Pretoria</a> 
             and a self taught Web Developer.
             <br />
             I started learning to code in 2020 having previously enrolled in an
@@ -285,6 +275,7 @@
             sit amet, consectetur adipisicing elit. Deserunt molestias tempora,
             ratione expedita enim repellendus aut magnam placeat iure accusamus.
           </p>
+          <div class="camp_hub">
           <a
             class="cta"
             id="profile-link"
@@ -299,6 +290,7 @@
             class="cta"
             >Free Code Camp</a
           >
+        </div>
         </div>
       </div>
     </section>
