--- a/index.html
+++ b/index.html
@@ -53,12 +53,9 @@
         <div class="skills-top">
           <h1 class="section-title">Sk<span>i</span>lls</h1>
           <p>
-            I'm a self taught front end developer having began coding in November
-            2019. Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
-            alias laudantium harum, cumque modi mollitia ut doloremque! Tempora
-            nesciunt quam non. Quos fugiat iste similique amet nulla consequatur
-            neque. Magni. <br>
-            <a href="resume.pdf" target="_blank">Download Resume</a>
+            I'm a self taught front end developer with a Responsive Web Design.
+            I was previously a Customer Care Agent at the Compensation Fund, Department of Labour.
+            <br> <a href="" target="_blank">Download Resume</a>
           </p>
         </div>
         
@@ -172,11 +169,8 @@
               <a href="#"
                 ><img
                   src="/img/lewis.jpg"
-                  alt="lewis hamilton"
-                  srcset="
-                    https://www.formula1.com/content/fom-website/en/drivers/lewis-hamilton/_jcr_content/image16x9.img.1536.high.jpg
-                  "
-              /></a>
+                  alt="lewis hamilton"/>
+              </a>
             </div>
           </div>
           <div class="project-item">
@@ -187,17 +181,13 @@
               >
                 <h1>Survey Form</h1>
                 <h2>FreeCodeCamp Responsive Web Design Project</h2>
-                <p>A bootsrap survey form.</p>
+                <p>A survey form.</p>
               </a>
             </div>
             <div class="project-img">
               <img
                 src="/img/survey.jpg"
-                alt="img"
-                srcset="
-                  https://images.unsplash.com/photo-1519387310011-ce0c0fbc6ab2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=888&q=80
-                "
-              />
+                alt="img"/>
             </div>
           </div>
           <div class="project-item">
@@ -214,38 +204,30 @@
             <div class="project-img">
               <img
                 src="/img/audi.jpg"
-                alt="img"
-                srcset="
-                  https://images.unsplash.com/photo-1564343003979-e531807e5b6e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80
-                "
-              />
+                alt="img"/>
             </div>
           </div>
+
           <div class="project-item">
-            <div class="project-tile">
+            <div class="project-tile" id="fpl">
               <a
                 href="https://shakexsempe.github.io/Technical-Documentation-Page/"
                 target="_blank"
               >
                 <h1>Technical Documentation Page</h1>
                 <h2>FreeCodeCamp Responsive Web Design Project</h2>
-                <p>Technical Documentation Page</p>
-                <p>
-                  A beginners guide to the premier league fantasy football
-                  platform.
-                </p>
+                <p>A beginners guide to the premier league fantasy football
+                  platform.</p>
               </a>
             </div>
             <div class="project-img">
               <img
                 src="img/FPL.jpg"
                 alt="img"
-                srcset="
-                  https://resources.premierleague.com/premierleague/photo/2020/03/13/e7b0c18b-6bdf-48e8-91d9-0bfb05507c57/FPL_Statement_Graphic.png
-                "
-              />
+                />
             </div>
           </div>
+
           <div class="project-item">
             <div class="project-tile">
               <a href="#" target="_blank">
@@ -256,23 +238,13 @@
                   <a href="https://www.youtube.com/watch?v=ZFQkb26UD1Y"
                     >One Page Website project by Shaif Afran</a
                   >
-                  via
-                  <a
-                    href="https://www.youtube.com/channel/UCdxaLo9ALJgXgOUDURRPGiQ"
-                  >
-                    WEB CIFAR YouTube channel</a
-                  >
-                </p>
+                  </p>
               </a>
             </div>
             <div class="project-img">
               <img
                 src="/img/home.jpg"
-                alt="img"
-                srcset="
-                  https://images.unsplash.com/photo-1516026672322-bc52d61a55d5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=666&q=80
-                "
-              />
+                alt="img"/>
             </div>
           </div>
         </div>
@@ -292,15 +264,14 @@
           <h1 class="section-title">About<span>me</span></h1>
           <h2>Font End Web Developer</h2>
           <p>
-            I'm an <a href="resume.pdf" target="_blank">International Relations Graduate from University of Pretoria</a> 
+            I'm an International Relations Graduate from University of Pretoria 
             and a self taught Web Developer.
-            <br />
+            <br/>
+            I'm a former Customer Care agent at the Compensation Fund (Deparment of Labour) and 
             I started learning to code in 2020 having previously enrolled in an
             Introduction of IT Fundemantas course via Coursera. My current
             objective is to work as Front End Developer and ultimately as I gain
-            experience progress on to a Full Stack developer. Lorem ipsum dolor
-            sit amet, consectetur adipisicing elit. Deserunt molestias tempora,
-            ratione expedita enim repellendus aut magnam placeat iure accusamus.
+            experience progress on to a Full Stack developer. 
           </p>
           <div class="camp_hub">
           <a
