--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <div class="project-img">
               <a href="#"
                 ><img
-                  src="/img/lewis.jpg"
+                  src="img/lewis.jpg"
                   alt="lewis hamilton"/>
               </a>
             </div>
@@ -186,7 +186,7 @@
             </div>
             <div class="project-img">
               <img
-                src="/img/survey.jpg"
+                src="img/survey.jpg"
                 alt="img"/>
             </div>
           </div>
@@ -203,7 +203,7 @@
             </div>
             <div class="project-img">
               <img
-                src="/img/audi.jpg"
+                src="img/audi.jpg"
                 alt="img"/>
             </div>
           </div>
@@ -243,7 +243,7 @@
             </div>
             <div class="project-img">
               <img
-                src="/img/home.jpg"
+                src="img/home.jpg"
                 alt="img"/>
             </div>
           </div>
