changed project tile font sizes

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="skills-top">
           <h1 class="section-title">Sk<span>i</span>lls</h1>
           <p>
-            I'm a self taught front end developer with a Responsive Web Design.
+            I'm a self taught front end developer with a focus on Responsive Web Design.
             I was previously a Customer Care Agent at the Compensation Fund, Department of Labour.
             <br> <a href="" target="_blank">Download Resume</a>
           </p>
@@ -121,7 +121,7 @@
             </div>
             <h2>Node JS</h2>
             <p>
-              Node Package Manager (npm) 
+              Node Package Manager (npm). 
             </p>
           </div>
 
@@ -158,10 +158,10 @@
                 target="_blank"
               >
                 <h1>Tribute Page</h1>
-                <h2>FreeCodeCamp Responsive Web Design Project</h2>
+                <h2>FreeCodeCamp Responsive Web Design Project #1</h2>
                 <p>
-                  Six time Formula One World Champion Lewis Hamilton tribute
-                  page
+                  <strike>Six</strike> Seven time Formula One World Champion Lewis Hamilton tribute
+                  page.
                 </p></a
               >
             </div>
@@ -180,8 +180,8 @@
                 target="_blank"
               >
                 <h1>Survey Form</h1>
-                <h2>FreeCodeCamp Responsive Web Design Project</h2>
-                <p>A survey form.</p>
+                <h2>FreeCodeCamp Responsive Web Design Project #2</h2>
+                <p>A short survey form.</p>
               </a>
             </div>
             <div class="project-img">
@@ -197,8 +197,8 @@
                 target="_blank"
               >
                 <h1>Product Landing Page</h1>
-                <h2>FreeCodeCamp Responsive Web Design Project</h2>
-                <p>Product Landing Pagefeaturing the Audi RS3.</p>
+                <h2>FreeCodeCamp Responsive Web Design Project #3</h2>
+                <p>Audi RS3 Product Landing Page.</p>
               </a>
             </div>
             <div class="project-img">
@@ -215,7 +215,7 @@
                 target="_blank"
               >
                 <h1>Technical Documentation Page</h1>
-                <h2>FreeCodeCamp Responsive Web Design Project</h2>
+                <h2>FreeCodeCamp Responsive Web Design Project #4</h2>
                 <p>A beginners guide to the premier league fantasy football
                   platform.</p>
               </a>
@@ -232,11 +232,11 @@
             <div class="project-tile">
               <a href="#" target="_blank">
                 <h1>Personal Portfolio Webpage</h1>
-                <h2>FreeCodeCamp Responsive Web Design Project</h2>
+                <h2>FreeCodeCamp Responsive Web Design Project #5</h2>
                 <p>
                   Using the
                   <a href="https://www.youtube.com/watch?v=ZFQkb26UD1Y"
-                    >One Page Website project by Shaif Afran</a
+                    >One Page Website project by Shaif Afran.</a
                   >
                   </p>
               </a>
@@ -268,10 +268,11 @@
             and a self taught Web Developer.
             <br/>
             I'm a former Customer Care agent at the Compensation Fund (Deparment of Labour) and 
-            I started learning to code in 2020 having previously enrolled in an
-            Introduction of IT Fundemantas course via Coursera. My current
+            I started learning to code in 2019 having previously enrolled in an
+            Introduction of IT Fundemantas course via Coursera. My
             objective is to work as Front End Developer and ultimately as I gain
             experience progress on to a Full Stack developer. 
+            <br> You can view my progress by viewing my projects on gitHub and my Free-Code-Camp page via the buttons below: 
           </p>
           <div class="camp_hub">
           <a
@@ -298,7 +299,7 @@
     <section id="contact">
       <div class="contact container">
         <div>
-          <h1 class="section-title">Contact <span>Info</span></h1>
+          <h1 class="section-title">Contact<span>Info</span></h1>
         </div>
         <div class="contact-items">
           <div class="contact-item">
