changed skills tile font size

--- a/index.html
+++ b/index.html
@@ -234,9 +234,8 @@
                 <h1>Personal Portfolio Webpage</h1>
                 <h2>FreeCodeCamp Responsive Web Design Project #5</h2>
                 <p>
-                  Using the
                   <a href="https://www.youtube.com/watch?v=ZFQkb26UD1Y"
-                    >One Page Website project by Shaif Afran.</a
+                    >Using the 'One Page Website' project by Shaif Afran.</a
                   >
                   </p>
               </a>
