made text align changes to the desktop and mobile view

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!--Hero Section-->
     <section id="welcome-section">
       <div class="hero container">
-        <div>
+        <div id="hero-h1">
           <h1>My Name Is</h1>
           <h1>Boitumelo Sempe</h1>
           <h1><span>aka</span></h1>
