added a page progress

--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
           </div>
         </nav>
       </div>
+      <!--Progress-bar-->
+      <div class="progress-container">
+        <div class="progress-bar" id="myBar"></div>
+      </div>
+      <!--end of Progress-bar-->
     </section>
     <!--End of Header-->
 
