changes background image

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             </div>
             <div class="project-img">
               <img
-                src="img/home.jpg"
+                src="img/unit3-sky.jpg"
                 alt="img"/>
             </div>
           </div>
