--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         <div class="skills-top">
           <h1 class="section-title">Sk<span>i</span>lls</h1>
           <p>
-            I'm a self taught front end developer with a focus on Responsive Web Design.
-            I was previously a Customer Care Agent at the Compensation Fund, Department of Labour.
+            I'm a self taught front end developer with a keen interest in Responsive Web Design and React-JS development.
+            I was previously a Customer Care Agent at the Compensation Fund, Department of Labour where I gained skills in customer relations.
             <br> <a href="" target="_blank">Download Resume</a>
           </p>
         </div>
@@ -141,7 +141,8 @@
             <h2>React JS</h2>
             <p>
             Prefered front end library.</p>
-            <p>No projects yet.. in progress</p>
+            <p>No projects yet.. in progress
+            </p>
           </div>
 
         </div>
@@ -158,11 +159,11 @@
         <div class="all-projects">
           <div class="project-item">
             <div class="project-tile">
+              <h1>Tribute Page</h1>
               <a
                 href="https://shakexsempe.github.io/lewis-hamilton-tribute-page/"
                 target="_blank"
               >
-                <h1>Tribute Page</h1>
                 <h2>FreeCodeCamp Responsive Web Design Project #1</h2>
                 <p>
                   <strike>Six</strike> Seven time Formula One World Champion Lewis Hamilton tribute
@@ -180,11 +181,11 @@
           </div>
           <div class="project-item">
             <div class="project-tile">
+              <h1>Survey Form</h1>
               <a
                 href="https://shakexsempe.github.io/Survey-Form/"
                 target="_blank"
               >
-                <h1>Survey Form</h1>
                 <h2>FreeCodeCamp Responsive Web Design Project #2</h2>
                 <p>A short survey form.</p>
               </a>
@@ -197,11 +198,11 @@
           </div>
           <div class="project-item">
             <div class="project-tile">
+              <h1>Product Landing Page</h1>
               <a
                 href="https://shakexsempe.github.io/Product-Landing-Page/"
                 target="_blank"
               >
-                <h1>Product Landing Page</h1>
                 <h2>FreeCodeCamp Responsive Web Design Project #3</h2>
                 <p>Audi RS3 Product Landing Page.</p>
               </a>
@@ -215,11 +216,11 @@
 
           <div class="project-item">
             <div class="project-tile" id="fpl">
+              <h1>Technical Documentation Page</h1>
               <a
                 href="https://shakexsempe.github.io/Technical-Documentation-Page/"
                 target="_blank"
               >
-                <h1>Technical Documentation Page</h1>
                 <h2>FreeCodeCamp Responsive Web Design Project #4</h2>
                 <p>A beginners guide to the premier league fantasy football
                   platform.</p>
@@ -235,13 +236,11 @@
 
           <div class="project-item">
             <div class="project-tile">
+              <h1>Personal Portfolio Webpage</h1>
               <a href="#" target="_blank">
-                <h1>Personal Portfolio Webpage</h1>
                 <h2>FreeCodeCamp Responsive Web Design Project #5</h2>
                 <p>
-                  <a href="https://www.youtube.com/watch?v=ZFQkb26UD1Y"
-                    >Using the 'One Page Website' project by Shaif Afran.</a
-                  >
+                  Using the 'One Page Website' project by Shaif Afran.
                   </p>
               </a>
             </div>
@@ -268,30 +267,31 @@
           <h1 class="section-title">About<span>me</span></h1>
           <h2>Font End Web Developer</h2>
           <p>
-            I'm an International Relations Graduate from University of Pretoria 
-            and a self taught Web Developer.
-            <br/>
-            I'm a former Customer Care agent at the Compensation Fund (Deparment of Labour) and 
+            I'm an International Relations Graduate from University of Pretoria having gained my A-levels at the the International
+            School of South Africa.<br/><br/>
+            
+            Before becoming a self taught Web Developer,
+            I was a Customer Care agent at the Compensation Fund (Deparment of Labour).<br/> 
             I started learning to code in 2019 having previously enrolled in an
-            Introduction of IT Fundemantas course via Coursera. My
+            Introduction of IT Fundemantas course via Coursera. <br/><br/> My
             objective is to work as Front End Developer and ultimately as I gain
             experience progress on to a Full Stack developer. 
-            <br> You can view my progress by viewing my projects on gitHub and my Free-Code-Camp page via the buttons below: 
+            <br> You can view my progress via my projects on GitHub and my Free-Code-Camp page via the buttons below: 
           </p>
           <div class="camp_hub">
           <a
-            class="cta"
-            id="profile-link"
+                      class="profile-link"
             target="_blank"
             href="https://github.com/ShakexSempe"
-            >Git Hub</a
+            id="profile-link"
+            >Git<span>Hub</span></a
           >
           <br />
           <a
             href="https://www.freecodecamp.org/boitumelo-sempe"
             target="_blank"
-            class="cta"
-            >Free Code Camp</a
+            class="profile-link"
+            >Free<span>Code</span>Camp</a
           >
         </div>
         </div>
