--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             </div>
             <div class="project-img">
               <img
-                src="img/unit3-sky.jpg"
+                src="img/unit-3.jpg"
                 alt="img"/>
             </div>
           </div>
