--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               />
             </div>
             <h2>HTML</h2>
-            <p>Basic HTML 5. 
+            <p>Intermediary HTML. 
           </div>
 
           <div class="skills-item">
