--- a/index.html
+++ b/index.html
@@ -250,6 +250,23 @@
                 alt="img"/>
             </div>
           </div>
+
+          <div class="project-item">
+            <div class="project-tile">
+              <h1>Node & Express</h1>
+              <a href="#" target="_blank">
+                <h2>FreeCodeCamp APIs & Microservices Certificate</h2>
+                <p>
+                  Managing Node NPM packages and Express 
+                  </p>
+              </a>
+            </div>
+            <div class="project-img">
+              <img
+                src="img/npm.bmp"
+                alt="img"/>
+            </div>
+          </div>
         </div>
       </div>
     </section>
