--- a/index.html
+++ b/index.html
@@ -249,17 +249,17 @@
 
           <div class="project-item">
             <div class="project-tile">
-              <h1>Personal Portfolio Webpage</h1>
+              <h1>Color Themed Personal Portfolio Webpage</h1>
               <a href="#" target="_blank">
-                <h2>FreeCodeCamp Responsive Web Design Project #5</h2>
+                <h2>HTML 5 Tutorial</h2>
                 <p>
-                  Using the 'One Page Website' project by Shaif Afran.
+                  A themed Portfolio page HTML_5 tutorial by Dennis Ivanov
                   </p>
               </a>
             </div>
             <div class="project-img">
               <img
-                src="img/unit-3.jpg"
+                src="img/theme.bmp"
                 alt="img"/>
             </div>
           </div>
