--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
           <div class="project-item">
             <div class="project-tile">
               <h1>Color Themed Personal Portfolio Webpage</h1>
-              <a href="#" target="_blank">
+              <a href="https://shakexsempe.github.io/Themed-Portfolio-page/" target="_blank">
                 <h2>HTML 5 Tutorial</h2>
                 <p>
                   A themed Portfolio page HTML_5 tutorial by Dennis Ivanov
