--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
               <a href="https://shakexsempe.github.io/Themed-Portfolio-page/" target="_blank">
                 <h2>HTML 5 Tutorial</h2>
                 <p>
-                  A themed Portfolio page HTML_5 tutorial by Dennis Ivanov
+                  HTML-5 tutorial presented by Dennis Ivanov. 
                   </p>
               </a>
             </div>
