--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <div class="projects-header">
           <h1 class="section-title"><span>Projects</span></h1>
         </div>
-        <div class="all-projects">
+        <di class="all-projects">
           <div class="project-item">
             <div class="project-tile">
               <h1>Tribute Page</h1>
@@ -280,7 +280,25 @@
                 alt="img"/>
             </div>
           </div>
-        </div>
+
+            <div class="project-item">
+              <div class="project-tile">
+                <h1>React [tutorial]</h1>
+                <a href="https://react-fundementals-tutorial-2021.netlify.app/" target="_blank">
+                  <h2>Full React Course 2020</h2>
+                  <p>
+                    React Fundementals presented by John Smilga. <br>
+                    App hosted on Netlify 
+                    </p>
+                </a>
+              </div>
+              <div class="project-img">
+                <img
+                  src="img/react.bmp"
+                  alt="img"/>
+              </div>
+          </div>
+        
       </div>
     </section>
     <!--End of Projects Section-->
