--- a/index.html
+++ b/index.html
@@ -266,12 +266,13 @@
 
           <div class="project-item">
             <div class="project-tile">
-              <h1>Node & Express</h1>
+              <h1>Basic Node & Express</h1>
               <a href="#" target="_blank">
                 <h2>FreeCodeCamp APIs & Microservices Certificate</h2>
                 <p>
-                  Managing Node NPM packages and Express 
+                  Managing Node Packages (npm) and Express challenges. 
                   </p>
+                  <p>App hosted on Heroku</p>
               </a>
             </div>
             <div class="project-img">
