made spelling corrections to About Me section

--- a/index.html
+++ b/index.html
@@ -316,16 +316,16 @@
           <h1 class="section-title">About<span>me</span></h1>
           <h2>Font End Web Developer</h2>
           <p>
-            I'm an International Relations Graduate from University of Pretoria having gained my A-levels at the the International
-            School of South Africa.<br/><br/>
-            
-            Before becoming a self taught Web Developer,
-            I was a Customer Care agent at the Compensation Fund (Deparment of Labour).<br/> 
-            I started learning to code in 2019 having previously enrolled in an
-            Introduction of IT Fundemantas course via Coursera. <br/><br/> My
-            objective is to work as Front End Developer and ultimately as I gain
-            experience progress on to a Full Stack developer. 
-            <br> You can view my progress via my projects on GitHub and my Free-Code-Camp page via the buttons below: 
+            I'm an International Relations Graduate from University of Pretoria having gained my A-levels at the
+            International School of South Africa. <br><br>
+            Before becoming a self-taught Web Developer, I was a Customer Care agent at the Compensation Fund
+            (Department of Labour).
+            I started learning to code in 2019 having previously enrolled in an Introduction of IT Fundamentals course
+            via Coursera. <br><br>
+            My objective is to work as Front End Developer and ultimately as I gain experience progress on to a Full
+            Stack developer.
+
+            <br> You can view my progress via my projects on GitHub and my Free-Code-Camp page via the buttons below:
           </p>
           <div class="camp_hub">
           <a
