added a MongoDb skill tile and filer on desktop view

--- a/index.html
+++ b/index.html
@@ -126,8 +126,6 @@
               <li>Node Package Manager (npm)</li>
               <li>Express JS</li>
             </ul>
-            
-
           </div>
 
           <div class="skills-item">
@@ -143,6 +141,19 @@
             Prefered front end library.</p>
             <p>No projects yet.. in progress
             </p>
+          </div>
+
+          <div class="skills-item">
+            <div class="icon">
+              <img
+                src="icons/icons8-database-restore-64.png"
+                alt="icon"
+              />
+            </div>
+            <h2>MongoDB</h2>
+            <ul>
+              <li>Mongoose</li>
+            </ul>
           </div>
 
           <div class="skills-item">
