display flex to last div in footer

--- a/index.html
+++ b/index.html
@@ -462,7 +462,10 @@
             </a>
           </div>
         </div>
-        <p>2021 Boitumelo Sempe.</p>
+        <div id="bs21">
+          <p>Boitumelo Sempe.</p>
+          <p>2021</p>
+        </div>
       </div>
     </section>
     <!--End of Footer-->
