added my resume to repository files and in the index.html

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <p>
             I'm a self taught front end developer with a keen interest in Responsive Web Design and React-JS development.
             I was previously a Customer Care Agent at the Compensation Fund, Department of Labour where I gained skills in customer relations.
-            <br> <a href="" target="_blank">Download Resume</a>
+            <br> <a href="bSempe CV.pdf" target="_blank">Download Resume</a>
           </p>
         </div>
         
