added a dropdown menu to the skills section

--- a/index.html
+++ b/index.html
@@ -63,10 +63,14 @@
             <br> <a href="bSempe CV.pdf" target="_blank">Download Resume</a>
           </p>
         </div>
-        
-        <div class="skills-bottom">
+    <!--Dropdown-->    
+        <div class="dropdown">
+          <button onclick="dropdown()" class="dropbtn">My Skills</button>
+          <div id="myDropdown" class="dropdown-content">
 
-          <div class="skills-item">
+         <div class="skills-bottom">
+
+          <div id="html5" class="skills-item">
             <div class="icon">
               <img
                 src="/icons/icons8-html-5-64.png"
@@ -168,9 +172,10 @@
               Compensation Fund, Department of Labour. 
             </p>
           </div>
-
         </div>
       </div>
+    </div>
+   </div>
     </section>
     <!--End of Skills section-->
 
