added animation to header button

--- a/index.html
+++ b/index.html
@@ -45,7 +45,14 @@
           <h1>My Name Is</h1>
           <h1>Boitumelo Sempe</h1>
           <h1><span>aka</span></h1>
-          <a href="#about" type="button" class="cta" id="cta-header">Shakex</a>
+          <a href="#about" type="button" class="cta" id="cta-header">
+            <span style="--i:1;" >S</span>
+        <span style="--i:2;" >h</span>
+        <span style="--i:3;" >a</span>
+        <span style="--i:4;" >k</span>
+        <span style="--i:5;" >e</span>
+        <span style="--i:6;" >x</span>
+          </a>
         </div>
       </div>
     </section>
@@ -101,9 +108,7 @@
             <div class="icon">
               <img
                 src="/icons/icons8-javascript-64.png"
-                alt="icon"
-                srcset="https://img.icons8.com/nolan/64/javascript.png"
-              />
+                alt="icon"/>
             </div>
             <h2>Javascript</h2>
             <ul>
@@ -131,9 +136,7 @@
             <div class="icon">
               <img
                 src="icons/icons8-react-native-64.png"
-                alt="icon"
-                srcset="https://img.icons8.com/nolan/64/react-native.png"
-              />
+                alt="icon"/>
             </div>
             <h2>React JS</h2>
             <p>
@@ -190,10 +193,7 @@
               id="profile-link"
               >Git<span>Hub</span></a> 
         </div>
-        <!--Dropdown Projects-->    
-        <div class="dropdown">
-          <button onclick="projectsDropdown()" class="dropbtn">Projects</button>
-          <div id="projectsDropdown" class="dropdown-content">
+        
         <div class="project-item">
             <div class="project-tile">
               <h1>Tribute Page</h1>
@@ -324,8 +324,6 @@
               </div>
           </div>
         
-          </div>
-        </div>  
 
 
       </div>
