--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <div id="html5" class="skills-item">
             <div class="icon">
               <img
-                src="/icons/icons8-html-5-64.png"
+                src="icons/icons8-html-5-64.png"
                 alt="icon"/>
             </div>
             <h2>HTML 5</h2>
@@ -89,7 +89,7 @@
           <div class="skills-item">
             <div class="icon">
               <img
-                src="/icons/icons8-css-filetype-64.png"
+                src="icons/icons8-css-filetype-64.png"
                 alt="icon"/>
             </div>
             <h2>CSS</h2>
@@ -103,7 +103,7 @@
           <div class="skills-item">
             <div class="icon">
               <img
-                src="/icons/icons8-javascript-64.png"
+                src="icons/icons8-javascript-64.png"
                 alt="icon"/>
             </div>
             <h2>Javascript</h2>
