styling changes to active menu and 'aka' apan

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div id="hero-h1">
           <h1>My Name Is</h1>
           <h1>Boitumelo Sempe</h1>
-          <h1 id="aka"><span>aka</span></h1>
+          <h1 id="aka"><span>a.k.a</span></h1>
           <a href="#about" type="button" class="cta" id="cta-header">
             <span style="--i:1;" >S</span>
         <span style="--i:2;" >h</span>
@@ -66,7 +66,8 @@
           <h1 class="section-title">Sk<span>i</span>lls</h1>
           <p>
             I'm a self taught front end developer with a keen interest in Responsive Web Design and React-JS development.
-            I was previously a Customer Care Agent at the Compensation Fund, Department of Labour where I gained skills in customer relations.
+            My skilset is built up from online platforms such as Free-Code-Camp, Coursera, W3schools, Traversey Media and Udemy.
+            Ultimelty I aim to become a full stack MERN developer. View my full skill set in the dropdown section below.
           </p>
         </div>
     <!--Dropdown-->    
@@ -123,7 +124,7 @@
             </div>
             <h2>Node JS</h2>
             <ul>
-              <li>Node Package Manager (npm)</li>
+              <li>Node Package Manager</li>
               <li>Express JS</li>
             </ul>
           </div>
@@ -135,10 +136,8 @@
                 alt="icon"/>
             </div>
             <h2>React JS</h2>
-            <p>
-            Prefered front end library.</p>
-            <p>No projects yet.. in progress
-            </p>
+            <p>No presonal projects yet.. in progress</p>
+            <p>See <a href="#projects">Projects</a></p>
           </div>
 
           <div class="skills-item">
@@ -203,6 +202,11 @@
                   page.
                 </p></a
               >
+              <ul class="tech-list">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Javascript</li>
+              </ul>
             </div>
             <div class="project-img">
               <a href="#"
@@ -222,6 +226,10 @@
                 <h2>FreeCodeCamp Responsive Web Design Project #2</h2>
                 <p>A short survey form.</p>
               </a>
+              <ul class="tech-list">
+                <li>HTML</li>
+                <li>CSS</li>
+              </ul>
             </div>
             <div class="project-img">
               <img
@@ -239,6 +247,10 @@
                 <h2>FreeCodeCamp Responsive Web Design Project #3</h2>
                 <p>Audi RS3 Product Landing Page.</p>
               </a>
+              <ul class="tech-list">
+                <li>HTML</li>
+                <li>CSS</li>
+              </ul>
             </div>
             <div class="project-img">
               <img
@@ -258,6 +270,10 @@
                 <p>A beginners guide to the premier league fantasy football
                   platform.</p>
               </a>
+              <ul class="tech-list">
+                <li>HTML</li>
+                <li>CSS</li>
+              </ul>
             </div>
             <div class="project-img">
               <img
@@ -276,6 +292,11 @@
                   HTML-5 tutorial presented by Dennis Ivanov. 
                   </p>
               </a>
+              <ul class="tech-list">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Javascript</li>
+              </ul>
             </div>
             <div class="project-img">
               <img
@@ -294,6 +315,11 @@
                   </p>
                   <p>App hosted on Heroku</p>
               </a>
+              <ul class="tech-list">
+                <li>Node.js</li>
+                <li>Express.js</li>
+                <li>Heroku</li>
+              </ul>
             </div>
             <div class="project-img">
               <img
@@ -312,6 +338,11 @@
                     App hosted on Netlify 
                     </p>
                 </a>
+                <ul class="tech-list">
+                  <li>React</li>
+                  <li>NPM</li>
+                  <li>Netlify</li>
+                </ul>
               </div>
               <div class="project-img">
                 <img
