--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
     <!--End of Contact Section-->
 
     <!--Footer-->
-    <section id="footer">
+    <footer id="footer">
       <div class="footer container">
         <div class="brand">
           <h1><span>S</span>hakex <span>S</span>empe</h1>
@@ -491,11 +491,11 @@
           </div>
         </div>
         <div id="bs21">
-          <p>Boitumelo Sempe.</p>
+          <p>Boitumelo Sempe</p>
           <p>2021</p>
         </div>
       </div>
-    </section>
+    </footer>
     <!--End of Footer-->
     <script src="js/app.js"></script>
   </body>
