added animation to projects h1

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
     <section id="skills">
       <div class="skills container">
         <div class="skills-top">
-          <h1 class="section-title">Sk<span>i</span>lls</h1>
+          <h1 id="skill-h1" class="section-title">Sk<span>i</span>lls</h1>
           <p>
             I'm a self taught front end developer with a keen interest in Responsive Web Design and React-JS development.
-            My skilset is built up from online platforms such as Free-Code-Camp, Coursera, W3schools, Traversey Media and Udemy.
+            My skill-set is built up from various online platforms such as Free-Code-Camp, Coursera, W3schools, Traversey Media and Udemy.
             Ultimelty I aim to become a full stack MERN developer. View my full skill set in the dropdown section below.
           </p>
         </div>
@@ -83,9 +83,11 @@
                 src="icons/icons8-html-5-64.png"
                 alt="icon"/>
             </div>
-            <h2>HTML 5</h2>
-            
-          </div>
+              <h2>HTML 5</h2>
+              <ul>
+                <li>Applied Visual Design</li>
+              </ul>
+            </div>
             
           <div class="skills-item">
             <div class="icon">
@@ -176,7 +178,7 @@
     <section id="projects">
       <div class="projects container">
         <div class="projects-header">
-          <h1 class="section-title"><span>Projects</span></h1>
+          <h1 id="projects-h1" class="section-title"><span>Projects</span></h1>
         </div>
 
         <div class="all-projects">
