added 2 more project titles

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <section id="skills">
       <div class="skills container">
         <div class="skills-top">
-          <h1 id="skill-h1" class="section-title">Sk<span>i</span>lls</h1>
+          <h1 class="section-title">Sk<span>i</span>lls</h1>
           <p>
             I'm a self taught front end developer with a keen interest in Responsive Web Design and React-JS development.
             My skill-set is built up from various online platforms such as Free-Code-Camp, Coursera, W3schools, Traversey Media and Udemy.
@@ -282,6 +282,50 @@
                 src="img/FPL.jpg"
                 alt="img"
                 />
+            </div>
+          </div>
+
+          <div class="project-item">
+            <div class="project-tile" id="fpl">
+              <h1>Bootsrap Scrollbars</h1>
+              <a
+                href="https://shakexsempe.github.io/bootstrap-scrollbars/"
+                target="_blank"
+              >
+                <h2>Bootsrap tutorial</h2>
+                <p> A collection of cards each with a different bootsrap scrollbar</p>
+              </a>
+              <ul class="tech-list">
+                <li>Bootsrap 4.0.0</li>
+                <li></li>
+              </ul>
+            </div>
+            <div class="project-img">
+              <img
+                src="img/bootstrap-scrollbars.bmp"
+                alt="img"
+                />
+            </div>
+          </div>
+
+          <div class="project-item">
+            <div class="project-tile">
+              <h1>Sign-In Form</h1>
+              <a href="https://shakexsempe.github.io/sign-in-form/" target="_blank">
+                <h2>HTML 5 Tutorial</h2>
+                <p>
+                   Sign in form with animated labels on focus.
+                  </p>
+              </a>
+              <ul class="tech-list">
+                <li>HTML</li>
+                <li>CSS</li>
+              </ul>
+            </div>
+            <div class="project-img">
+              <img
+                src="img/sign-in-form.bmp"
+                alt="img"/>
             </div>
           </div>
 
