--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <h1 class="section-title">Sk<span>i</span>lls</h1>
           <p>
             I'm a self taught front end developer with a keen interest in Responsive Web Design and React-JS development.
-            My skill-set is built up from various online platforms such as Free-Code-Camp, Coursera, W3schools, Traversey Media and Udemy.
+            My skill set is built up from various online platforms such as Free-Code-Camp, Coursera, W3schools, Traversey Media and Udemy.
             Ultimelty I aim to become a full stack MERN developer. View my full skill set in the dropdown section below.
           </p>
         </div>
