added translate transform to footer icons

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
             </div>
             <h2>CSS</h2>
             <ul>
-              <li>Responsive Web Design</li>
               <li>Bootstrap</li>
+              <li>Responsive Web Design</li>
             </ul>
             
           </div>
@@ -111,8 +111,8 @@
             </div>
             <h2>Javascript</h2>
             <ul>
-              <li>ES6 Fundementals.</li>
               <li>Basic Algorithim Scripting</li>
+              <li>ES6 Fundementals.</li>
             </ul>
             <p> </p>
           </div>
@@ -126,8 +126,8 @@
             </div>
             <h2>Node JS</h2>
             <ul>
-              <li>Node Package Manager</li>
               <li>Express JS</li>
+              <li>Node Package Manager</li>
             </ul>
           </div>
 
@@ -423,9 +423,7 @@
             via Coursera and then most recently <a
             href="https://www.freecodecamp.org/boitumelo-sempe"
             target="_blank" class="fcc-link">FreeCodeCamp</a>. <br><br>
-            My objective is to work as Front End Developer and ultimately as I gain experience progress on to a Full MERN
-            Stack Developer.
-            <br><a id="cv" href="bSempe CV.pdf" target="_blank">Download Resume</a>
+            <a id="cv" href="bSempe CV.pdf" target="_blank">Download Resume</a>
           </p>
           
         </div>
