added a new project item

--- a/index.html
+++ b/index.html
@@ -327,6 +327,27 @@
 
           <div class="project-item">
             <div class="project-tile">
+              <h1>Webkit Image Gallery</h1>
+              <a href="https://shakexsempe.github.io/-webkit-box-reflect/" target="_blank">
+                <h2>HTML 5 Tutorial</h2>
+                <p>
+                  Image slideshow with -webkit properties
+                </p>
+              </a>
+              <ul class="tech-list">
+                <li>HTML</li>
+                <li>CSS</li>
+              </ul>
+            </div>
+            <div class="project-img">
+              <img
+                src="img/dogs.bmp"
+                alt="img"/>
+            </div>
+          </div>
+
+          <div class="project-item">
+            <div class="project-tile">
               <h1>Color Themed Personal Portfolio Webpage</h1>
               <a href="https://shakexsempe.github.io/Themed-Portfolio-page/" target="_blank">
                 <h2>HTML 5 Tutorial</h2>
@@ -557,8 +578,10 @@
           </div>
         </div>
         <div id="bs21">
-          <p>Boitumelo Sempe</p>
-          <p>2021</p>
+          <ul>
+            <li>Boitumelo Sempe</li>
+            <li>2021</li>
+          </ul>
         </div>
       </div>
     </footer>
