added animation to the hamburger radius

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <div class="all-projects">
           <a target="_blank" href="https://github.com/ShakexSempe"
               id="profile-link"
-              >Git<span>Hub</span></a> 
+              >Git Hub</a> 
         
         
           <div class="project-item">
