--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
         <div class="skills-top">
           <h1 class="section-title">Sk<span>i</span>lls</h1>
           <p>
-            I'm a self taught front end developer with a keen interest in Responsive Web Design and React-JS development.
+            I'm a self taught front end developer with a keen interest in Responsive Web Design and an aspiration to progress into a full MERN stack developer.
             My skill set is built up from various online platforms such as Free-Code-Camp, Coursera, W3schools, Traversey Media and Udemy.
-            My main objective is to progress into a full stack MERN developer. View my full skill set in the dropdown section below.
+            View my full skill set in the dropdown section below.
           </p>
         </div>
     <!--Dropdown-->    
