added a scrollbar to About section paragraph

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ShakexSempe Portfolio Page</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css" integrity="sha512-6qkvBbDyl5TDJtNJiC8foyEVuB6gxMBkrKy67XpqnIDxyvLLPJzmTjAj1dRJfNdmXWqD10VbJoeN4pOQqDwvRA==" crossorigin="anonymous">
   </head>
   <body>
     <!--Header-->
@@ -65,7 +66,7 @@
         <div class="skills-top">
           <h1 class="section-title">Sk<span>i</span>lls</h1>
           <p>
-            I'm a self taught front end developer with a keen interest in Responsive Web Design and an aspiration to progress into a full MERN stack developer.
+            I'm a self taught front end developer with a keen interest in Responsive Web Design and an aspiration to progress into a Full Stack Web Developer.
             My skill set is built up from various online platforms such as Free-Code-Camp, Coursera, W3schools, Traversey Media and Udemy.
             View my full skill set in the dropdown section below.
           </p>
@@ -457,7 +458,7 @@
         <div class="col-right">
           <h1 class="section-title">About<span>me</span></h1>
           <h2>Font End Web Developer</h2>
-          <p>
+          <p id="content-1" class="custom-scrollbar-js" >
             I'm an International Relations Graduate from University of Pretoria having gained my A-levels at the
             International School of South Africa. <br><br>
             Before becoming a self-taught Web Developer, I was a Customer Care agent at the Compensation Fund
@@ -465,9 +466,15 @@
             I started learning to code in 2019 having previously enrolled in an Introduction of IT Fundamentals course
             via Coursera and then most recently <a
             href="https://www.freecodecamp.org/boitumelo-sempe"
-            target="_blank" class="fcc-link">FreeCodeCamp</a>. <br><br>
-            <a id="cv" href="cv/bSempeCV2021.pdf" target="_blank">Download Resume</a>
+            target="_blank" class="fcc-link">FreeCodeCamp</a>. 
+            <br><br>
+            As an aspiring and relatively inexperinced developer my current object to is to master the HTML 5 fundematals to a professional proficiency and as I gain experince in the industry progress on to a full stack developer.
+            I'm currently studying towards MERN stack competancy as I've taken to javascript as my learning and foundational programming language. 
+            <br><br> As I progress in JS and development as a whole I then intend on 
+            learning other development stacks, most notably Python back end scripting and programming.
+            <br><br>As of 2021 I'm working towrds establishing myself in the industry and gaining the necessary exprience and compentancies to make an effective web developer.
           </p>
+            <a id="cv" href="cv/bSempeCV2021.pdf" target="_blank">Download Resume</a>
           
         </div>
       </div>
@@ -586,6 +593,10 @@
       </div>
     </footer>
     <!--End of Footer-->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js" integrity="sha512-2hIlk2fL+NNHkULe9gGdma/T5vSYk80U5tvAFSy3dGEl8XD4h2i6frQvHv5B+bm/Itmi8nJ6krAcj5FWFcBGig==" crossorigin="anonymous"></script>
     <script src="js/app.js"></script>
+    <script src="js/boot.js"></script>
   </body>
 </html>
