added 'javascript' to product landing page description

--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
               <ul class="tech-list">
                 <li>HTML</li>
                 <li>CSS</li>
+                <li>Javascript
               </ul>
             </div>
             <div class="project-img">
