added animation to the welcome section h1 span

--- a/index.html
+++ b/index.html
@@ -43,8 +43,16 @@
     <section id="welcome-section">
       <div class="hero container">
         <div id="hero-h1">
-          <h1>My Name Is</h1>
-          <h1>Boitumelo Sempe</h1>
+          <h1>
+            <span style="--s:1">My</span>
+            <span style="--s:2">Name</span>
+            <span style="--s:3">Is</span>
+          </h1>
+          <h1>
+            <span style="--s:4">Boitumelo</span>
+            <span style="--s:5">Sempe</span>
+          </h1>
+
           <h1 id="aka"><span>a.k.a</span></h1>
           <a href="#about" type="button" class="cta" id="cta-header">
             <span style="--i:1;" >S</span>
