added 'postman' to skills

--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
             <h2>MongoDB</h2>
             <ul>
               <li>Mongoose</li>
+              <li>Postman</li>
             </ul>
           </div>
 
