's'in cta header

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
           <h1 id="aka"><span>a.k.a</span></h1>
           <a href="#about" type="button" class="cta" id="cta-header">
-            <span style="--i:1;" >S</span>
+            <span style="--i:1;" >s</span>
         <span style="--i:2;" >h</span>
         <span style="--i:3;" >a</span>
         <span style="--i:4;" >k</span>
