animations to css skills

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
             </div>
             <h2>CSS</h2>
             <ul>
+              <li>animations</li>
               <li>Bootstrap</li>
               <li>Responsive Web Design</li>
             </ul>
