added Animations to css skills

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             </div>
             <h2>CSS</h2>
             <ul>
-              <li>animations</li>
+              <li>Animations</li>
               <li>Bootstrap</li>
               <li>Responsive Web Design</li>
             </ul>
