welcome section animation change

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
               <h2>HTML 5</h2>
               <ul>
                 <li>Applied Visual Design</li>
+                <li>Semantic Markup</li>
               </ul>
             </div>
             
@@ -148,8 +149,7 @@
                 alt="icon"/>
             </div>
             <h2>React JS</h2>
-            <p>No presonal projects yet.. in progress</p>
-            <p>See <a href="#projects">Projects</a></p>
+            <p>No personal projects yet.. in progress</p>
           </div>
 
           <div class="skills-item">
