--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <section id="skills">
       <div class="skills container">
         <div class="skills-top">
-          <h1 class="section-title">Sk<span>i</span>lls</h1>
+          <h1 data-text="skills" class="section-title">Sk<span>i</span>lls</h1>
           <p>
             I'm a self taught front end developer with a keen interest in Responsive Web Design and an aspiration to progress into a Full Stack Web Developer.
             My skill set is built up from various online platforms such as Free-Code-Camp, Coursera, W3schools, Traversey Media and Udemy.
@@ -189,7 +189,7 @@
     <section id="projects">
       <div class="projects container">
         <div class="projects-header">
-          <h1 id="projects-h1" class="section-title"><span>Projects</span></h1>
+          <h1 data-text="projects" id="projects-h1" class="section-title"><span>Projects</span></h1>
         </div>
         <div class="all-projects">
           <a target="_blank" href="https://github.com/ShakexSempe"
@@ -467,7 +467,7 @@
           </div>
         </div>
         <div class="col-right">
-          <h1 class="section-title">About<span>me</span></h1>
+          <h1 data-text="aboutme" class="section-title">About<span>me</span></h1>
           <h2>Font End Web Developer</h2>
           <p id="content-1" class="custom-scrollbar-js" >
             I'm an International Relations Graduate from University of Pretoria having gained my A-levels at the
@@ -496,7 +496,7 @@
     <section id="contact">
       <div class="contact container">
         <div>
-          <h1 class="section-title">Contact<span>Info</span></h1>
+          <h1 data-text="contactinfo" class="section-title">Contact<span>Info</span></h1>
         </div>
         <div class="contact-items">
           <div class="contact-item">
