--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <div class="project-img">
               <a href="#"
                 ><img
-                  src="img/lewis.jpg"
+                  src="img/lewis.bmp"
                   alt="lewis hamilton"/>
               </a>
             </div>
@@ -242,7 +242,7 @@
             </div>
             <div class="project-img">
               <img
-                src="img/survey.jpg"
+                src="img/survey.bmp"
                 alt="img"/>
             </div>
           </div>
@@ -264,7 +264,7 @@
             </div>
             <div class="project-img">
               <img
-                src="img/audi.jpg"
+                src="img/product-landing.bmp"
                 alt="img"/>
             </div>
           </div>
@@ -287,7 +287,7 @@
             </div>
             <div class="project-img">
               <img
-                src="img/FPL.jpg"
+                src="img/fpl.bmp"
                 alt="img"
                 />
             </div>
@@ -311,6 +311,30 @@
             <div class="project-img">
               <img
                 src="img/bootstrap-scrollbars.bmp"
+                alt="img"
+                />
+            </div>
+          </div>
+
+          <div class="project-item">
+            <div class="project-tile" id="hamburger">
+              <h1>Animated Hamburger Menu</h1>
+              <a
+                href="https://shakexsempe.github.io/animated-hamburger-menu/"
+                target="_blank"
+              >
+                <h2>HTML 5 Tutorial Project</h2>
+                <p>Landing page with an animated hamburger menu.</p>
+              </a>
+              <ul class="tech-list">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Javascript</li>
+              </ul>
+            </div>
+            <div class="project-img">
+              <img
+                src="img/b7.bmp"
                 alt="img"
                 />
             </div>
