--- a/index.html
+++ b/index.html
@@ -384,22 +384,21 @@
 
           <div class="project-item">
             <div class="project-tile">
-              <h1>Color Themed Personal Portfolio Webpage</h1>
-              <a href="https://shakexsempe.github.io/Themed-Portfolio-page/" target="_blank">
+              <h1>Overflowing Icon Links</h1>
+              <a href="https://shakexsempe.github.io/Icons-overflow/" target="_blank">
                 <h2>HTML 5 Tutorial</h2>
                 <p>
-                  HTML-5 tutorial presented by Dennis Ivanov. 
+                  Page displaying my social media links and contact info 
                   </p>
               </a>
               <ul class="tech-list">
                 <li>HTML</li>
                 <li>CSS</li>
-                <li>Javascript</li>
               </ul>
             </div>
             <div class="project-img">
               <img
-                src="img/theme.bmp"
+                src="img/icons.bmp"
                 alt="img"/>
             </div>
           </div>
