animated gradient project tile

--- a/index.html
+++ b/index.html
@@ -295,6 +295,31 @@
 
           <div class="project-item">
             <div class="project-tile" id="fpl">
+              <h1>Animated Gradients</h1>
+              <a
+                href="https://shakexsempe.github.io/animated-gradients/"
+                target="_blank"
+              >
+                <h2>CSS Animations</h2>
+                <p>Background and Text gradient animation from a selection of four primary shades.</p>
+              </a>
+              <ul class="tech-list">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Javascript</li>
+              </ul>
+            </div>
+            <div class="project-img">
+              <img
+                src="img/gradients.bmp"
+                alt="img"
+                />
+            </div>
+          </div>
+
+
+          <div class="project-item">
+            <div class="project-tile" id="fpl">
               <h1>Bootsrap Scrollbars</h1>
               <a
                 href="https://shakexsempe.github.io/bootstrap-scrollbars/"
