--- a/index.html
+++ b/index.html
@@ -367,6 +367,28 @@
 
           <div class="project-item">
             <div class="project-tile">
+              <h1>Sliding Hover Navigation</h1>
+              <a href="https://shakexsempe.github.io/sign-in-form/" target="_blank">
+                <h2>HTML 5 Tutorial</h2>
+                <p>
+                  Navigation bar with sliding focus bar on links
+                </p>
+              </a>
+              <ul class="tech-list">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Javascript</li>
+              </ul>
+            </div>
+            <div class="project-img">
+              <img
+                src="img/slideNav.bmp"
+                alt="img"/>
+            </div>
+          </div>
+
+          <div class="project-item">
+            <div class="project-tile">
               <h1>Sign-In Form</h1>
               <a href="https://shakexsempe.github.io/sign-in-form/" target="_blank">
                 <h2>HTML 5 Tutorial</h2>
