--- a/index.html
+++ b/index.html
@@ -520,6 +520,29 @@
                   alt="img"/>
               </div>
           </div>
+
+          <div class="project-item">
+            <div class="project-tile">
+              <h1>React Random Quote Machine</h1>
+              <a href="https://react-fundementals-tutorial-2021.netlify.app/" target="_blank">
+                <h2>FreeCodeCamp Front End Libraries Project #1</h2>
+                <p>
+                  React Random quote Generator presented by Aryan Jabbari. <br>
+                  App hosted on Netlify 
+                  </p>
+              </a>
+              <ul class="tech-list">
+                <li>React</li>
+                <li>NPM</li>
+                <li>Netlify</li>
+              </ul>
+            </div>
+            <div class="project-img">
+              <img
+                src="img/react2.bmp"
+                alt="img"/>
+            </div>
+        </div>
         
         </div>
 
