added responsive cards to projects, replaced sign in form

--- a/index.html
+++ b/index.html
@@ -389,11 +389,11 @@
 
           <div class="project-item">
             <div class="project-tile">
-              <h1>Sign-In Form</h1>
-              <a href="https://shakexsempe.github.io/sign-in-form/" target="_blank">
+              <h1>Responsive Cards</h1>
+              <a href="https://shakexsempe.github.io/responsive-cards/" target="_blank">
                 <h2>HTML 5 Tutorial</h2>
                 <p>
-                  Sign in form with animated labels on focus.
+                  CSS Grid to implement device width responsive cards.
                 </p>
               </a>
               <ul class="tech-list">
@@ -403,7 +403,7 @@
             </div>
             <div class="project-img">
               <img
-                src="img/sign-in-form.bmp"
+                src="img/cards.bmp"
                 alt="img"/>
             </div>
           </div>
