edited html tags - header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <!--Header-->
-    <section id="header">
+    <header id="header">
       <div class="header container">
         <nav id="navbar">
           <div class="brand">
@@ -36,7 +36,7 @@
         <div class="progress-bar" id="myBar"></div>
       </div>
       <!--end of Progress-bar-->
-    </section>
+    </header>
     <!--End of Header-->
 
     <!--Hero Section-->
