sliding hover url correction

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
           <div class="project-item">
             <div class="project-tile">
               <h1>Sliding Navigation</h1>
-              <a href="https://shakexsempe.github.io/sign-in-form/" target="_blank">
+              <a href="https://shakexsempe.github.io/sliding-hover-navigation/" target="_blank">
                 <h2>HTML 5 Tutorial</h2>
                 <p>
                   Navigation bar with sliding focus bar on links
