box shadows on contact cards

--- a/index.html
+++ b/index.html
@@ -614,10 +614,7 @@
           </div>
         </div>
         <div id="bs21">
-          <ul>
-            <li>Boitumelo Sempe</li>
-            <li>2021</li>
-          </ul>
+          <p>Boitumelo Sempe. 2021</p>
         </div>
       </div>
     </footer>
