--- a/index.html
+++ b/index.html
@@ -156,6 +156,28 @@
 
               <div class="skills-item">
                 <div class="icon">
+                  <img src="icons/icons8-code-fork-64.png" alt="icon" />
+                </div>
+                <h2>Version Control</h2>
+                <ul>
+                  <li>Git</li>
+                  <li>GitHub</li>
+                </ul>
+              </div>
+
+              <div class="skills-item">
+                <div class="icon">
+                  <img src="icons/icons8-cloud-64.png" alt="icon" />
+                </div>
+                <h2>Web Hosting</h2>
+                <ul>
+                  <li>Heroku</li>
+                  <li>Netlify</li>
+                </ul>
+              </div>
+
+              <div class="skills-item">
+                <div class="icon">
                   <img src="icons/icons8-customer-insight-64.png" alt="icon" />
                 </div>
                 <h2>Customer Care</h2>
